# datatrawl-analyzer-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/my_analyzer/: __init__.py  analyzer.py
tests/: test_smoke.py
